--- a/Views/Produtos/Create.cshtml
+++ b/Views/Produtos/Create.cshtml
@@ -10,33 +10,39 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
                 <label asp-for="Descricao" class="control-label"></label>
                 <input asp-for="Descricao" class="form-control" />
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
                 <label asp-for="Preco" class="control-label"></label>
                 <input asp-for="Preco" class="form-control" />
                 <span asp-validation-for="Preco" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
-                <label asp-for="ImagemUrl" class="control-label"></label>
-                <input asp-for="ImagemUrl" class="form-control" />
-                <span asp-validation-for="ImagemUrl" class="text-danger"></span>
+                <label asp-for="ImagemUpload" class="control-label">Ficheiro da Imagem</label>
+                <input asp-for="ImagemUpload" type="file" class="form-control" />
+                <span asp-validation-for="ImagemUpload" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
                 <label asp-for="Estoque" class="control-label"></label>
                 <input asp-for="Estoque" class="form-control" />
                 <span asp-validation-for="Estoque" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -47,4 +53,3 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
