--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,6 +8,19 @@
     <h1 class="display-4">Nossos Produtos</h1>
 </div>
 
+<form asp-controller="Home" asp-action="Index" method="get" class="mb-4">
+    <div class="input-group">
+        <input type="text" name="searchString" value="@ViewData["CurrentFilter"]" class="form-control"
+            placeholder="Buscar produtos por nome ou descrição..." />
+        <button type="submit" class="btn btn-primary">
+            <i class="fa fa-search"></i> Buscar
+        </button>
+        <a asp-action="Index" class="btn btn-secondary">Limpar</a>
+    </div>
+</form>
+
+<hr />
+
 @if (!Model.Any())
 {
     <div class="alert alert-warning text-center">Nenhum produto em estoque para exibir.</div>
