--- a/Views/Produtos/Details.cshtml
+++ b/Views/Produtos/Details.cshtml
@@ -1,51 +1,61 @@
 @model Ecomerce.Models.Produto
 
 @{
-    ViewData["Title"] = "Detalhes do Produto";
+    ViewData["Title"] = Model.Nome;
 }
 
-<h1>Detalhes</h1>
-
-<div>
-    <h4>@Model.Nome</h4>
-    <hr />
-    <dl class="row">
-        
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descricao)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Descricao)
-        </dd>
-        
-        </dl>
-    
-    <div class="row mb-4">
-        <div class="col-md-4">
-            <form asp-controller="Carrinho" asp-action="Adicionar" method="post">
-                <input type="hidden" name="id" value="@Model.Id" />
-                
-                <div class="form-group mb-3">
-                    <label for="quantidade">Quantidade</label>
-                    <input type="number" name="quantidade" id="quantidade" value="1" min="1" max="@Model.Estoque" class="form-control" style="width: 100px;" required />
-                </div>
-                
-                @if (Model.Estoque > 0)
-                {
-                    <button type="submit" class="btn btn-primary btn-lg">
-                        Adicionar ao Carrinho
-                    </button>
-                }
-                else
-                {
-                    <span class="text-danger">Produto Esgotado!</span>
-                }
-            </form>
+<div class="row mt-4">
+    <div class="col-md-5">
+        <div class="card shadow-sm border-0">
+            <img src="@Model.ImagemUrl" class="card-img-top" alt="@Model.Nome"
+                style="max-height: 500px; object-fit: contain; padding: 15px;">
         </div>
+    </div>
+
+    <div class="col-md-7">
+        <h1 class="display-4">@Model.Nome</h1>
+        <hr />
+
+        <p class="lead">@Model.Descricao</p>
+        <hr />
+
+        <div class="mb-4">
+            <h2 class="text-success">@Model.Preco.ToString("C2")</h2>
+            @if (Model.Estoque > 0)
+            {
+                <span class="badge bg-success">Em Estoque: @Model.Estoque</span>
+            }
+            else
+            {
+                <span class="badge bg-danger">Esgotado</span>
+            }
+        </div>
+
+        @if (Model.Estoque > 0)
+        {
+            <form asp-controller="Carrinho" asp-action="Adicionar" method="post" class="d-flex align-items-center">
+                <input type="hidden" name="id" value="@Model.Id" />
+
+                <div class="me-3">
+                    <label for="quantidade" class="form-label visually-hidden">Quantidade:</label>
+                    <input type="number" name="quantidade" id="quantidade" value="1" min="1" max="@Model.Estoque"
+                        class="form-control" style="width: 80px;" />
+                </div>
+
+                <button type="submit" class="btn btn-lg btn-primary flex-grow-1">
+                    <i class="fa fa-cart-plus"></i> Adicionar ao Carrinho
+                </button>
+            </form>
+        }
+        else
+        {
+            <button type="button" class="btn btn-lg btn-secondary" disabled>Produto Indisponível</button>
+        }
     </div>
 </div>
 
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-secondary btn-sm">Editar (Admin)</a> |
-    <a asp-action="Index">Voltar à Lista</a>
+<div class="mt-5">
+    <a asp-action="Index" asp-controller="Home" class="btn btn-outline-secondary">
+        <i class="fa fa-arrow-left"></i> Voltar à Home
+    </a>
 </div>
