Feat:  Refatorar o gerenciamento de pedidos e atualizar as visualizações para melhorar a funcionalidade

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,8 +46,8 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarAdminDropdown">
                                     <li>
-                                        <a class="dropdown-item" asp-controller="Pedidos" asp-action="AguardandoSaida">
-                                            <i class="fas fa-box"></i> Pedidos Aguardando Saída
+                                        <a class="dropdown-item" asp-controller="Pedidos" asp-action="Index">
+                                            <i class="fas fa-box"></i> Gerenciar Pedidos
                                         </a>
                                     </li>
                                     <li>
