--- a/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,15 @@
-﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
+﻿@using System.Globalization
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
+<script src="~/lib/cldrjs/dist/cldr.js"></script>
+<script src="~/lib/cldrjs/dist/cldr/event.js"></script>
+<script src="~/lib/cldrjs/dist/cldr/supplemental.js"></script>
+<script src="~/lib/globalize/dist/globalize.js"></script>
+<script src="~/lib/globalize/dist/globalize/number.js"></script>
+<script src="~/lib/globalize/dist/globalize/date.js"></script>
+
+<script>
+    Globalize.culture('@CultureInfo.CurrentCulture.Name');
+</script>
