--- a/Views/Produtos/Delete.cshtml
+++ b/Views/Produtos/Delete.cshtml
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.ImagemUrl)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Estoque)
+            @Html.DisplayNameFor(model => model.Preco)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Estoque)
+            @Html.DisplayFor(model => model.Preco)
         </dd>
     </dl>
     
