--- a/Views/Produtos/Index.cshtml
+++ b/Views/Produtos/Index.cshtml
@@ -25,7 +25,7 @@
                 @Html.DisplayNameFor(model => model.ImagemUrl)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Estoque)
+                @Html.DisplayNameFor(model => model.Preco)
             </th>
             <th></th>
         </tr>
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.ImagemUrl)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Estoque)
+                @Html.DisplayFor(modelItem => item.Preco)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
