--- a/Views/Produtos/Edit.cshtml
+++ b/Views/Produtos/Edit.cshtml
@@ -32,14 +32,9 @@
 
                 <div class="mb-3">
                     <label asp-for="Descricao" class="form-label fw-semibold"></label>
-                    <textarea asp-for="Descricao" class="form-control shadow-sm" rows="3" placeholder="Descrição detalhada..."></textarea>
+                    <textarea asp-for="Descricao" class="form-control shadow-sm" rows="3"
+                        placeholder="Descrição detalhada..."></textarea>
                     <span asp-validation-for="Descricao" class="text-danger small"></span>
-                </div>
-
-                <div class="mb-3">
-                    <label asp-for="Estoque" class="form-label fw-semibold"></label>
-                    <input asp-for="Estoque" class="form-control shadow-sm" placeholder="Quantidade em estoque" />
-                    <span asp-validation-for="Estoque" class="text-danger small"></span>
                 </div>
 
                 <div class="mb-4">
@@ -52,20 +47,26 @@
                 {
                     <div class="mb-4 text-center">
                         <label class="form-label fw-semibold d-block">Imagem Atual:</label>
-                        <img src="@Model.ImagemUrl"
-                             alt="Imagem Atual"
-                             class="img-thumbnail shadow-sm rounded-3"
-                             style="max-width: 200px; height: auto;" />
+                        <img src="@Model.ImagemUrl" alt="Imagem Atual" class="img-thumbnail shadow-sm rounded-3"
+                            style="max-width: 200px; height: auto;" />
                     </div>
                 }
 
+                <hr />
+
                 <div class="d-flex justify-content-between align-items-center mt-4">
+
                     <a asp-action="Index" class="btn btn-outline-secondary px-4">
                         <i class="bi bi-arrow-left me-1"></i> Voltar à Lista
                     </a>
-                    <button type="submit" class="btn btn-success px-4">
-                        <i class="bi bi-save me-1"></i> Salvar
-                    </button>
+                    <div class="mb-4">
+                        <a asp-action="GerenciarVariacoes" asp-route-id="@Model.Id" class="btn btn-warning">
+                            <i class="fas fa-flask"></i> Gerenciar variações do produto
+                        </a>
+                        <button type="submit" class="btn btn-success px-4">
+                            <i class="bi bi-save me-1"></i> Salvar
+                        </button>
+                    </div>
                 </div>
             </form>
         </div>
@@ -73,5 +74,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
